@startuml Lab2_FactoryMethod

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontName "Segoe UI"
skinparam defaultFontName "Segoe UI"
skinparam shadowing false
skinparam linetype ortho

skinparam class {
    BackgroundColor #FEFEFE
    BorderColor #546E7A
    ArrowColor #546E7A
    HeaderBackgroundColor #E3F2FD
}
skinparam interface {
    BackgroundColor #E8F5E9
    BorderColor #2E7D32
}
skinparam abstract {
    BackgroundColor #FFF3E0
    BorderColor #E65100
}

title <b>Factory Method Pattern — Room Creation</b>

class RoomController {
    - _creator : RoomCreator
    - _roomRepository : IRoomRepository
    - _roomPricingService : IRoomPricingService
    - _creatorProvider : RoomCreatorProvider
    - _currentRoom : Room
    + RoomNumber : string
    + RoomPrice : decimal
    + RoomCapacity : int
    + SelectedRoomType : string
    + CurrentRoom : Room
    + CreateRoom() : void
}

abstract class RoomCreator {
    + CreateRoom(roomNumber, basePrice, capacity,\n    repository, pricingService) : tuple
    + {abstract} CreateProduct(roomId, roomNumber,\n    basePrice, capacity) : IRoomProduct
}

class StandardRoomCreator {
    + CreateProduct(roomId, roomNumber,\n    basePrice, capacity) : IRoomProduct
}

class DeluxeRoomCreator {
    - _amenities : List<string>
    - _hasBalcony : bool
    + CreateProduct(roomId, roomNumber,\n    basePrice, capacity) : IRoomProduct
}

class SuiteRoomCreator {
    - _hasKitchen : bool
    - _hasLivingRoom : bool
    + CreateProduct(roomId, roomNumber,\n    basePrice, capacity) : IRoomProduct
}

interface IRoomProduct {
    + RoomId : string
    + RoomNumber : string
    + BasePrice : decimal
    + IsAvailable : bool
    + Capacity : int
    + GetDisplayInfo() : string
    + GetDescription() : string
    + GetPriceSummary(calculatedPrice) : string
    + SetAvailability(status) : void
}

class StandardRoom {
    + RoomId : string
    + RoomNumber : string
    + BasePrice : decimal
    + Capacity : int
    + GetDisplayInfo() : string
    + GetDescription() : string
    + GetPriceSummary(price) : string
    + SetAvailability(status) : void
}

class DeluxeRoom {
    + RoomId : string
    + RoomNumber : string
    + BasePrice : decimal
    + Capacity : int
    + Amenities : IReadOnlyList<string>
    + HasBalcony : bool
    + GetDisplayInfo() : string
    + GetDescription() : string
    + GetPriceSummary(price) : string
    + SetAvailability(status) : void
}

class Suite {
    + RoomId : string
    + RoomNumber : string
    + BasePrice : decimal
    + NumberOfRooms : int
    + HasKitchen : bool
    + HasLivingRoom : bool
    + Capacity : int
    + GetDisplayInfo() : string
    + GetDescription() : string
    + GetPriceSummary(price) : string
    + SetAvailability(status) : void
}

class RoomCreatorProvider {
    - _registry : Dictionary<string, Func<RoomCreator>>
    + GetCreator(roomType) : RoomCreator
    + GetAvailableTypes() : IReadOnlyList<string>
}

RoomController --> RoomCreatorProvider : uses
RoomController --> RoomCreator : holds ref / calls CreateRoom()

RoomCreatorProvider ..> RoomCreator : returns

RoomCreator <|-- StandardRoomCreator
RoomCreator <|-- DeluxeRoomCreator
RoomCreator <|-- SuiteRoomCreator

RoomCreator ..> IRoomProduct : creates / uses

StandardRoomCreator ..> StandardRoom : <<creates>>
DeluxeRoomCreator   ..> DeluxeRoom   : <<creates>>
SuiteRoomCreator    ..> Suite        : <<creates>>

IRoomProduct <|.. StandardRoom
IRoomProduct <|.. DeluxeRoom
IRoomProduct <|.. Suite

@enduml
